Add GL function fetching, add window creation, add shader creation.